<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <plurals name="Nsongs">
        <item quantity="one">1 song</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nsongscomp">
        <item quantity="other"><xliff:g id="count_for_artist">%2$d</xliff:g> of <xliff:g id="total_count">%1$d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nalbums">
        
        <item quantity="one">1 album</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>
    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="goto_start">Library</string>
    <string name="delete_item">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="play_all">Play all</string>
    <string name="queue_all">Queue all</string>
    <string name="interleave_all">Interleave</string>
    <string name="interleaveNNN">Interleave <xliff:g id="src">%d</xliff:g>-<xliff:g id="dest">%d</xliff:g></string>
    <string name="shuffle">Shuffle</string>
    <string name="uniqueify">Remove dups</string>
    <string name="repeat">Repeat</string>
    <string name="rescan">Rescan music</string>
    <string name="delete_artist_desc">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from the SD card.</string>
    <string name="delete_artist_desc_nosdcard" msgid="1843750591006508005">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from USB storage.</string>
    <string name="delete_genre_desc">All <xliff:g id="artist">%s</xliff:g> songs will be permanently deleted from the SD card.</string>
    <string name="delete_genre_desc_nosdcard">All <xliff:g id="artist">%s</xliff:g> songs will be permanently deleted from USB storage.</string>
    <string name="delete_folder_desc">All songs in <xliff:g id="folder">%s</xliff:g> will be permanently deleted from the SD card.</string>
    <string name="delete_folder_desc_nosdcard">All songs in <xliff:g id="folder">%s</xliff:g> will be permanently deleted from USB storage.</string>
    <string name="delete_album_desc">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc_nosdcard" msgid="535515999268177079">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_song_desc">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_song_desc_nosdcard" msgid="1856800468541831408">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_confirm_button_text">OK</string>
    <plurals name="NNNtracksdeleted">
        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <string name="scanning">Scanning SD card\u2026</string>
    <string name="scanning_nosdcard" msgid="3529383847223198502">Scanning USB storage\u2026</string>
    <string name="play_queue_title">Play queue</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="genres_menu">Genres</string>
    <string name="folders_menu">Folders</string>
    <string name="folders_title">Folders</string>
    <string name="albums_title">Albums</string>
    <string name="genres_title">Genres</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="browse_menu">Artists</string>
    <string name="info">Info</string>
    <string name="search_title">Search</string>
    <string name="search_for">Search for</string>
    <string name="create_new_playlist">Create playlist</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_playlists_title">No playlists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="export_playlist_menu">Export</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="podcasts_title">Podcasts</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_title_nosdcard" msgid="9008284946643270850">No USB storage</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_missing_message_nosdcard" msgid="1169260755336159747">Your phone does not have USB storage.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_title_nosdcard" msgid="1162763571147174655">USB storage unavailable</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_busy_message_nosdcard" msgid="8071868348072728830">Sorry, your USB storage is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_title_nosdcard" msgid="165682155008600643">USB storage error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="sdcard_error_message_nosdcard" msgid="4574563894036627855">An error was encountered on your USB storage.</string>
    <string name="sdcard_scanning_title">SD card not ready yet</string>
    <string name="sdcard_scanning_title_nosdcard" msgid="1162763571147174655">USB storage not ready yet</string>
    <string name="sdcard_scanning_message">Sorry, your SD card is not ready yet, please wait for a while.</string>
    <string name="sdcard_scanning_message_nosdcard" msgid="8071868348072728830">Sorry, your USB storage is not ready yet, please wait for a while.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_genre_name">Unknown genre</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on.</string>
    <string name="shuffle_off_notif">Shuffle is off.</string>
    <string name="repeat_off_notif">Repeat is off.</string>
    <string name="repeat_current_notif">Repeating current song.</string>
    <string name="repeat_stopafter_notif">Stop after current song.</string>
    <string name="repeat_all_notif">Repeating all songs.</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" set as phone ringtone.</string>
    <string name="play_now">Play now</string>
    <string name="play_next">Play next</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_all_to_playlist">Add all to playlist</string>
    <string name="queue">Queue</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <string name="will_play_next">Will play next</string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist.</item>
    </plurals>
    <plurals name="NNNtrackstoplayqueue">
        
        <item quantity="one">1 song added to queue.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to queue.</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string-array name="weeklist">
        <item>"1 week"</item>
        <item>"2 weeks"</item>
        <item>"3 weeks"</item>
        <item>"4 weeks"</item>
        <item>"5 weeks"</item>
        <item>"6 weeks"</item>
        <item>"7 weeks"</item>
        <item>"8 weeks"</item>
        <item>"9 weeks"</item>
        <item>"10 weeks"</item>
        <item>"11 weeks"</item>
        <item>"12 weeks"</item>
    </string-array>
    <string name="weekpicker_set">Done</string>
    <string name="weekpicker_title">Set time</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_queue">Clear queue</string>
    <string name="applabel">DJD Player</string>
    <string name="musicshortcutlabel">Music playlist</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="remove">Remove</string>
    <string name="streamloadingtext">Connecting to <xliff:g id="host">%s</xliff:g></string>
    <string name="mediasearch">Search for <xliff:g id="term" example="Beethoven">%s</xliff:g> using:</string>
    <string name="working_artists">Artists\u2026</string>
    <string name="working_albums">Albums\u2026</string>
    <string name="working_genres">Genres\u2026</string>
    <string name="working_folders">Folders\u2026</string>
    <string name="working_songs">Songs\u2026</string>
    <string name="working_playlists">Playlists\u2026</string>
    <string name="loading">Loading</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Select music track</string>
    <string name="gadget_track">Track <xliff:g id="track_number">%d</xliff:g></string>
    <string name="fail_to_start_stream">Failed to play the requested stream.</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="search_hint">Search music</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="widget_initial_text">Touch to select music.</string>
    <string name="tabs">Tabs</string>
    <string name="show_artists_tab">Show artists tab</string>
    <string name="show_albums_tab">Show albums tab</string>
    <string name="show_genres_tab">Show genres tab</string>
    <string name="show_folders_tab">Show folders tab</string>
    <string name="show_songs_tab">Show songs tab</string>
    <string name="show_playlists_tab">Show playlists tab</string>
    <string name="music_folder">Music folder</string>
    <string name="select_music_folder">Select music folder</string>
    <string name="artist">Artist</string>
    <string name="composer">Composer</string>
    <string name="genre">Genre</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="duration">Duration</string>
    <string name="folder">Folder</string>
    <string name="filename">Filename</string>
    <string name="filesize">Size</string>
    <string name="mimetype">Mime Type</string>
    <string name="id">ID</string>
</resources>